# memoryos

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE.md  Dockerfile  LICENSE  Makefile  PLUGIN_API.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  memory  memory_add.py  memory_context.py  memory_digest.py  memory_doctor.py  memory_index.py  memory_init.py  memory_search.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: MEMANTO_COMPARISON.md
examples/: curator.json  example-decision.md  oss-candidate.json  task-learning.json
launchd/: com.local.memory.index.plist  com.memoryos.import-pending.plist.example
memoryos/: __init__.py  api.py  cli.py  config.py  models.py  plugins.py  search.py  storage.py  util.py
tests/: test_curator.py  test_init.py  test_pending_import.py  test_rebuild.py  test_session_context_and_verification.py  test_storage.py  test_structured_identity.py
