[project]
name = "memoryos-local"
version = "0.2.0"
description = "Local-first engineering memory for coding agents and developers."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
memory = "memoryos.cli:main"

[tool.setuptools]
packages = ["memoryos"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
